# q3map2

./: .gitignore  CMakeLists.txt  README.org  build_publish_mac.sh  build_publish_mac_release.sh  build_publish_win.bat  build_publish_win_release.bat
.github/workflows/: cmake-multi-platform.yml
libs/: CMakeLists.txt
libs/debugging/: debugging.h
libs/math/: vector.h
tools/: CMakeLists.txt
tools/quake3/: CMakeLists.txt
tools/quake3/common/: cmdlib.c  cmdlib.h  dirent_windows.h  imagelib.c  inout.c  inout.h  vfs.c  vfs.h
tools/quake3/q3map2/: Libs and Deps.txt  bsp.c  bspfile_abstract.c  convert_map_unity.c  fog.c  image.c  leakfile.c  main.c  map.c  patch.c  portals.c  q3map2.h  surface_extra.c  surface_meta.c  tjunction.c  visflow.c  writebsp.c
